<resources>
    <string name="app_name">androidCA</string>
    <string name="login_title">Let\'s start with who you are.</string>
    <string name="username_hint">USERNAME</string>
    <string name="password_hint">PASSWORD</string>
    <string name="login_submission">Login</string>
    <string name="fetch_hint">PICK YOUR PHOTOS</string>
    <string name="fetch_button">go</string>
    <string name="base_url">http://10.0.2.2:8080</string>
    <string name="warning_message">Incorrect username or password.</string>
    <string name="error_message">Can\'t connect to the server. Try again later.</string>
    <string name="error_fetch">Can\'t fetch photos. Try again later.</string>
    <string name="resolve_url">Resolving the url</string>
    <string name="fetch_status">Fetching: %1$d / 20</string>
    <string name="pick_status">Picking: %1$d / 6</string>
    <string name="check_description">Check your pick</string>
    <string name="game_start">GO</string>
    <string name="stop_watch">Time: %1$ds</string>
    <string name="play_hint">Matches: %1$d / 6</string>
    <string name="back_to_fetch">back to fetch</string>
    <string name="leaderboard_error">Oops! Something went wrong loading the leaderboard.</string>
</resources>