<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/url"
        style="@style/no_right_margin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/fetch_hint"
        app:boxStrokeColor="@color/retro"
        app:hintTextColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/fetch_button">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/theme"
            android:inputType="text"
            android:textSize="@dimen/input_size" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/fetch_button"
        app:layout_constraintTop_toTopOf="@id/url"
        app:layout_constraintBottom_toBottomOf="@id/url"
        app:layout_constraintLeft_toRightOf="@id/url"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/fetch_button"
        android:fontFamily="@font/normal"
        android:backgroundTint="@color/retro"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/button_margin"
        android:layout_marginEnd="@dimen/margin_textedit" />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fetch_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/url"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:layout_margin="@dimen/margin_textedit">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/normal"
                android:gravity="center"
                android:id="@+id/fetch_status"
                app:layout_constraintTop_toTopOf="parent"/>
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loading_bar"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="@dimen/loading_bar_height"
                android:scaleX="1.8"
                app:layout_constraintTop_toBottomOf="@id/fetch_status"
                app:lottie_rawRes="@raw/loading_bar"/>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:rowCount="5"
                android:columnCount="4"
                app:layout_constraintTop_toBottomOf="@id/loading_bar"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/fetch_grid"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <ImageButton
        android:id="@+id/check_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/check_button"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@id/fetch_card"
        app:layout_constraintBottom_toBottomOf="@id/fetch_card"
        android:contentDescription="@string/check_description"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>